lib/jsf_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/jsf.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class JsfBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  JsfBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  JsfBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void qjs_init() {
    return _qjs_init();
  }

  late final _qjs_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('qjs_init');
  late final _qjs_init = _qjs_initPtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Char> qjs_eval(
    ffi.Pointer<ffi.Char> code,
  ) {
    return _qjs_eval(
      code,
    );
  }

  late final _qjs_evalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>>('qjs_eval');
  late final _qjs_eval = _qjs_evalPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  void qjs_free_result(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _qjs_free_result(
      str,
    );
  }

  late final _qjs_free_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'qjs_free_result');
  late final _qjs_free_result =
      _qjs_free_resultPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void qjs_cleanup() {
    return _qjs_cleanup();
  }

  late final _qjs_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('qjs_cleanup');
  late final _qjs_cleanup = _qjs_cleanupPtr.asFunction<void Function()>();

  void qjs_exec_init_script(
    ffi.Pointer<ffi.Char> code,
  ) {
    return _qjs_exec_init_script(
      code,
    );
  }

  late final _qjs_exec_init_scriptPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'qjs_exec_init_script');
  late final _qjs_exec_init_script = _qjs_exec_init_scriptPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}
